--- a/extension-manifest-v3/src/_locales/en/messages.json
+++ b/extension-manifest-v3/src/_locales/en/messages.json
@@ -305,6 +305,9 @@
   "report_a_broken_page": {
     "message": "Report a broken page"
   },
+  "requests": {
+    "message": "Requests"
+  },
   "resume": {
     "message": "Resume"
   },
