--- a/extension-manifest-v3/src/_locales/de/messages.json
+++ b/extension-manifest-v3/src/_locales/de/messages.json
@@ -211,7 +211,7 @@
   "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
     "message": "Machen Sie Ghostery zum Rundumschutz für Ihre Privatsphäre, der Popups und Tracking ablehnt, oder tun Sie es selbst!"
   },
-	"manifest_name": {
+  "manifest_name": {
     "message": "Ghostery – Datenschutzorientierter Werbeblocker"
   },
   "manifest_short_description": {
@@ -232,6 +232,9 @@
   },
   "my_account": {
     "message": "Mein Konto"
+  },
+  "navigate_to_a_website_to_see_ghostery_in_action_": {
+    "message": "Navigate to a website to see Ghostery in action."
   },
   "never_consent": {
     "message": "Never-Consent"
@@ -362,12 +365,12 @@
   "trackers_wheel": {
     "message": "Tracker-Rad"
   },
-  "try_to_open_this_panel_on_a_different_browser_tab": {
-    "message": "Versuchen Sie dieses Feld in einem anderen Browser-Tab zu öffnen"
-  },
   "unidentified": {
-    "message": "Unbekannt",
+    "message": "Nicht identifiziert",
     "description": "Tracker category name"
+  },
+  "urls": {
+    "message": "URLs"
   },
   "website": {
     "message": "Website"
