--- a/extension-manifest-v3/src/_locales/zh_TW/messages.json
+++ b/extension-manifest-v3/src/_locales/zh_TW/messages.json
@@ -211,7 +211,7 @@
   "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
     "message": "讓 Ghostery 成為你的全面隱私倡議者，拒絕所有彈出式視窗和追蹤，或者你自己動手！"
   },
-	"manifest_name": {
+  "manifest_name": {
     "message": "Ghostery – 隱私廣告攔截器"
   },
   "manifest_short_description": {
@@ -232,6 +232,9 @@
   },
   "my_account": {
     "message": "我的帳號"
+  },
+  "navigate_to_a_website_to_see_ghostery_in_action_": {
+    "message": "Navigate to a website to see Ghostery in action."
   },
   "never_consent": {
     "message": "Never-Consent"
@@ -362,12 +365,12 @@
   "trackers_wheel": {
     "message": "追踪器輪盤"
   },
-  "try_to_open_this_panel_on_a_different_browser_tab": {
-    "message": "試著在不同的瀏覽器標籤上打開此面板"
-  },
   "unidentified": {
-    "message": "不明的",
+    "message": "不明",
     "description": "Tracker category name"
+  },
+  "urls": {
+    "message": "URLs"
   },
   "website": {
     "message": "網站"
