--- a/extension-manifest-v2/_locales/en/messages.json
+++ b/extension-manifest-v2/_locales/en/messages.json
@@ -22,18 +22,15 @@
       }
     }
   },
-  "ad": {
-    "message": "ad"
-  },
   "ad_blocking": {
     "message": "Ad-Blocking"
   },
   "additional_permissions_required": {
     "message": "Additional Permissions Required"
   },
-  "ads": {
-    "message": "ads"
-  },
+	"modified": {
+		"message": "Modified"
+	},
   "ads___onboarding": {
     "message": "Ads"
   },
@@ -263,20 +260,20 @@
     "message": "Blocked"
   },
   "blocking_category_tracker": {
-    "message": "Tracker"
+    "message": "Organization"
   },
   "blocking_category_tracker_found": {
     "message": "Found"
   },
   "blocking_category_trackers": {
-    "message": "Trackers"
+    "message": "Organizations"
   },
   "blocking_category_whitelisted": {
     "description": "as in '5 (trackers) TRUSTED'",
     "message": "Trusted"
   },
   "blocking_trackers": {
-    "message": "Trackers"
+    "message": "Tracker Database"
   },
   "blocking_unblock_all": {
     "message": "Unblock All"
@@ -1329,7 +1326,7 @@
     "message": "Refresh page and try again"
   },
   "requests_modified": {
-    "message": "Requests Modified:"
+    "message": "Trackers Modified:"
   },
   "requests_modified_tooltip": {
     "message": "Total number of tracking requests & elements modified by Anti-Tracking and Ad-Blocking"
@@ -1842,7 +1839,7 @@
     "message": "Tracker Details"
   },
   "trackers": {
-    "message": "Trackers"
+    "message": "Organizations"
   },
   "trackers_blocked": {
     "message": "Trackers Blocked:"
