--- a/extension-manifest-v2/_locales/en/messages.json
+++ b/extension-manifest-v2/_locales/en/messages.json
@@ -90,6 +90,9 @@
   "all_popups": {
     "message": "All Popups"
   },
+  "allowed": {
+    "message": "Allowed"
+  },
   "already_subscribed": {
     "message": "Already Subscribed"
   },
@@ -259,20 +262,20 @@
     "description": "as in '5 (trackers) BLOCKED'",
     "message": "Blocked"
   },
-  "blocking_category_tracker": {
+  "organization": {
     "message": "Organization"
   },
   "blocking_category_tracker_found": {
     "message": "Found"
   },
-  "blocking_category_trackers": {
+  "organizations": {
     "message": "Organizations"
   },
   "blocking_category_whitelisted": {
     "description": "as in '5 (trackers) TRUSTED'",
     "message": "Trusted"
   },
-  "blocking_trackers": {
+  "tracker_database": {
     "message": "Tracker Database"
   },
   "blocking_unblock_all": {
@@ -1319,6 +1322,9 @@
     "message": "Promos turned off. You can turn them back on in",
     "description": "translation must take into account that 'Settings' is appended to this string"
   },
+  "protection_disabled": {
+    "message": "Protection disabled"
+  },
   "recommended": {
     "message": "Recommended"
   },
@@ -1852,6 +1858,12 @@
   },
   "trackers_preview": {
     "message": "Trackers Preview"
+  },
+  "tracking_not_detected": {
+    "message": "Tracking not detected"
+  },
+  "trusted": {
+    "message": "Trused"
   },
   "try_ghostery_midnight": {
     "message": "Try Ghostery Midnight"
