--- a/extension-manifest-v3/src/_locales/en/messages.json
+++ b/extension-manifest-v3/src/_locales/en/messages.json
@@ -90,11 +90,17 @@
     "message": "Customer Interaction",
     "description": "Tracker category name"
   },
+  "days": {
+    "message": "days"
+  },
   "detailed_view": {
     "message": "Detailed View"
   },
   "disable": {
     "message": "Disable"
+  },
+  "disable_ghostery": {
+    "message": "Disable Ghostery"
   },
   "disable_trackers_preview": {
     "message": "Disable Trackers Preview"
@@ -127,6 +133,9 @@
   "enable_never_consent_": {
     "message": "Enable Never-Consent?"
   },
+  "enable_new_setup": {
+    "message": "Enable New Setup"
+  },
   "enabled": {
     "message": "Enabled"
   },
@@ -140,6 +149,9 @@
   },
   "for_more_information_read_our_full": {
     "message": "For more information read our full"
+  },
+  "ghostery__action_required": {
+    "message": "Ghostery: Action required"
   },
   "ghostery_browser_extension_is_installed_in_your_browser_but_is_inactive__you_are_browsing_the_web_unprotected_": {
     "message": "Ghostery Browser Extension is installed in your browser but is inactive. You are browsing the web unprotected."
@@ -189,9 +201,15 @@
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghostery will show how many trackers were blocked on a page. Clicking on the Ghostery icon reveals more detailed information."
   },
+  "ghostery_will_stop_working_in_": {
+    "message": "Ghostery will stop working in:"
+  },
   "hosting": {
     "message": "Hosting",
     "description": "Tracker category name"
+  },
+  "hours": {
+    "message": "hours"
   },
   "ignore": {
     "message": "Ignore"
@@ -299,6 +317,12 @@
   "read_more_on_whotracks_me": {
     "message": "Read more on WhoTracks.Me"
   },
+  "renew_ghostery_for_full_protection": {
+    "message": "renew GHOSTERY for full protection"
+  },
+  "renew_setup": {
+    "message": "Renew Setup"
+  },
   "replaces_the_ghostery_icon_in_the_browser_toolbar_with_the_tracker_wheel_": {
     "message": "Replaces the Ghostery icon in the browser toolbar with the tracker wheel."
   },
@@ -371,6 +395,9 @@
   "unidentified": {
     "message": "Unidentified",
     "description": "Tracker category name"
+  },
+  "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
+    "message": "We have updated Terms & Conditions. To continue using the Ghostery Tracker & Ad Blocker while browsing, please renew the setup."
   },
   "website": {
     "message": "Website"
