--- a/extension-manifest-v2/_locales/en/messages.json
+++ b/extension-manifest-v2/_locales/en/messages.json
@@ -1860,7 +1860,7 @@
     "message": "Tracking not detected"
   },
   "trusted": {
-    "message": "Trused"
+    "message": "Trusted"
   },
   "try_ghostery_midnight": {
     "message": "Try Ghostery Midnight"
