--- a/extension-manifest-v2/_locales/en/messages.json
+++ b/extension-manifest-v2/_locales/en/messages.json
@@ -28,9 +28,6 @@
   "additional_permissions_required": {
     "message": "Additional Permissions Required"
   },
-	"modified": {
-		"message": "Modified"
-	},
   "ads___onboarding": {
     "message": "Ads"
   },
@@ -262,21 +259,12 @@
     "description": "as in '5 (trackers) BLOCKED'",
     "message": "Blocked"
   },
-  "organization": {
-    "message": "Organization"
-  },
   "blocking_category_tracker_found": {
     "message": "Found"
-  },
-  "organizations": {
-    "message": "Organizations"
   },
   "blocking_category_whitelisted": {
     "description": "as in '5 (trackers) TRUSTED'",
     "message": "Trusted"
-  },
-  "tracker_database": {
-    "message": "Tracker Database"
   },
   "blocking_unblock_all": {
     "message": "Unblock All"
@@ -674,11 +662,17 @@
   "customize_setup": {
     "message": "Customize Setup"
   },
+  "days": {
+    "message": "days"
+  },
   "detailed_view": {
     "message": "Detailed View"
   },
   "disable": {
     "message": "Disable"
+  },
+  "disable_ghostery": {
+    "message": "Disable Ghostery"
   },
   "disable_trackers_preview": {
     "message": "Disable Trackers Preview"
@@ -716,6 +710,9 @@
   },
   "enable_never_consent_": {
     "message": "Enable Never-Consent?"
+  },
+  "enable_new_setup": {
+    "message": "Enable New Setup"
   },
   "enable_when_blacklisted": {
     "message": "To use this function, undo Restrict Site."
@@ -776,6 +773,9 @@
   "full_coverage_protection_promise": {
     "message": "Get full-coverage protection across all browsers & apps on your device"
   },
+  "ghostery__action_required": {
+    "message": "Ghostery: Action required"
+  },
   "ghostery_basic": {
     "message": "Basic"
   },
@@ -812,6 +812,9 @@
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghostery will show how many trackers were blocked on a page. Clicking on the Ghostery icon reveals more detailed information."
   },
+  "ghostery_will_stop_working_in_": {
+    "message": "Ghostery will stop working in:"
+  },
   "global_settings_saved": {
     "message": "Global Settings Saved"
   },
@@ -833,6 +836,9 @@
   "hosting": {
     "message": "Hosting",
     "description": "Tracker category name"
+  },
+  "hours": {
+    "message": "hours"
   },
   "ignore": {
     "message": "Ignore"
@@ -904,6 +910,9 @@
     "message": "Miscellaneous",
     "description": "Tracker category name"
   },
+  "modified": {
+    "message": "Modified"
+  },
   "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
     "message": "More information on $${0} methodology in Ghostery’s Manifesto."
   },
@@ -968,6 +977,12 @@
   },
   "options_tracker_wheel_disabled": {
     "message": "Disable Tracker Wheel in browser toolbar"
+  },
+  "organization": {
+    "message": "Organization"
+  },
+  "organizations": {
+    "message": "Organizations"
   },
   "page_load": {
     "message": "Page Load:"
@@ -1331,8 +1346,11 @@
   "refresh_and_try_again": {
     "message": "Refresh page and try again"
   },
-  "trackers_modified": {
-    "message": "Trackers Modified:"
+  "renew_ghostery_for_full_protection": {
+    "message": "renew GHOSTERY for full protection"
+  },
+  "renew_setup": {
+    "message": "Renew Setup"
   },
   "select_basic": {
     "message": "Select Basic"
@@ -1829,6 +1847,9 @@
   "tooltip_trust_on": {
     "message": "Trackers allowed and Anti-Tracking disabled on site. Click to Undo."
   },
+  "tracker_database": {
+    "message": "Tracker Database"
+  },
   "tracker_description_getting": {
     "message": "Getting tracker description…"
   },
@@ -1853,6 +1874,9 @@
   "trackers_detected_by_ghostery_on_this_website__nbsp_@_0_": {
     "message": "Trackers detected by Ghostery on this website:&nbsp;$${0}"
   },
+  "trackers_modified": {
+    "message": "Trackers Modified:"
+  },
   "trackers_preview": {
     "message": "Trackers Preview"
   },
@@ -1869,7 +1893,8 @@
     "message": "unblocked"
   },
   "unidentified": {
-    "message": "Unidentified"
+    "message": "Unidentified",
+    "description": "Tracker category name"
   },
   "unidentified_description": {
     "message": "Unidentified trackers scrubbed by Anti-Tracking"
@@ -1877,6 +1902,9 @@
   "unknown": {
     "message": "Unknown",
     "description": "Tracker category name"
+  },
+  "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
+    "message": "We have updated Terms & Conditions. To continue using the Ghostery Tracker & Ad Blocker while browsing, please renew the setup."
   },
   "welcome_to_ghostery": {
     "message": "Welcome to Ghostery"
