--- a/extension-manifest-v3/src/_locales/de/messages.json
+++ b/extension-manifest-v3/src/_locales/de/messages.json
@@ -90,11 +90,17 @@
     "message": "Kundeninteraktion",
     "description": "Tracker category name"
   },
+  "days": {
+    "message": "Tage"
+  },
   "detailed_view": {
     "message": "Detailansicht"
   },
   "disable": {
     "message": "Deaktivieren"
+  },
+  "disable_ghostery": {
+    "message": "Ghostery deaktivieren"
   },
   "disable_trackers_preview": {
     "message": "Tracker-Vorschau deaktivieren"
@@ -127,6 +133,9 @@
   "enable_never_consent_": {
     "message": "Never-Consent aktivieren?"
   },
+  "enable_new_setup": {
+    "message": "Neue Einrichtung aktivieren"
+  },
   "enabled": {
     "message": "Aktiviert"
   },
@@ -140,6 +149,9 @@
   },
   "for_more_information_read_our_full": {
     "message": "Für weitere Informationen lesen Sie bitte unsere vollständigen"
+  },
+  "ghostery__action_required": {
+    "message": "Ghostery: Aktion erforderlich"
   },
   "ghostery_browser_extension_is_installed_in_your_browser_but_is_inactive__you_are_browsing_the_web_unprotected_": {
     "message": "Die Ghostery-Browser-Erweiterung ist in Ihrem Browser installiert, aber nicht aktiviert. Sie surfen ungeschützt im Web."
@@ -189,9 +201,15 @@
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghostery zeigt Ihnen, wie viele Tracker auf einer Seite blockiert wurden. Wenn Sie auf das Ghostery-Symbol klicken, erhalten Sie detailliertere Informationen."
   },
+  "ghostery_will_stop_working_in_": {
+    "message": "Ghostery funktioniert nicht mehr in:"
+  },
   "hosting": {
     "message": "Hosting",
     "description": "Tracker category name"
+  },
+  "hours": {
+    "message": "Stunden"
   },
   "ignore": {
     "message": "Ignorieren"
@@ -299,11 +317,20 @@
   "read_more_on_whotracks_me": {
     "message": "Lesen Sie mehr auf WhoTracks.Me"
   },
+  "renew_ghostery_for_full_protection": {
+    "message": "erneuern Sie GHOSTERY für vollständigen Schutz"
+  },
+  "renew_setup": {
+    "message": "Einrichtung erneuern"
+  },
   "replaces_the_ghostery_icon_in_the_browser_toolbar_with_the_tracker_wheel_": {
     "message": "Ersetzt das Ghostery-Symbol in der Werkzeugleiste des Browsers mit dem Tracker-Rad."
   },
   "report_a_broken_page": {
     "message": "Fehlerhafte Seite melden"
+  },
+  "requests": {
+    "message": "Requests"
   },
   "resume": {
     "message": "Fortsetzen"
@@ -369,8 +396,8 @@
     "message": "Nicht identifiziert",
     "description": "Tracker category name"
   },
-  "urls": {
-    "message": "URLs"
+  "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
+    "message": "Wir haben unsere allgemeinen Geschäftsbedingungen aktualisiert. Um den Ghostery Tracker & Ad Blocker beim Surfen weiterhin nutzen zu können, erneuern Sie bitte die Einrichtung."
   },
   "website": {
     "message": "Website"
