--- a/extension-manifest-v3/src/_locales/es/messages.json
+++ b/extension-manifest-v3/src/_locales/es/messages.json
@@ -90,11 +90,17 @@
     "message": "Interacción con el cliente",
     "description": "Tracker category name"
   },
+  "days": {
+    "message": "days"
+  },
   "detailed_view": {
     "message": "Vista detallada"
   },
   "disable": {
     "message": "Deshabilitar"
+  },
+  "disable_ghostery": {
+    "message": "Disable Ghostery"
   },
   "disable_trackers_preview": {
     "message": "Deshabilitar vista previa de rastreadores"
@@ -127,6 +133,9 @@
   "enable_never_consent_": {
     "message": "¿Habilitar Never-Consent?"
   },
+  "enable_new_setup": {
+    "message": "Enable New Setup"
+  },
   "enabled": {
     "message": "Habilitado"
   },
@@ -140,6 +149,9 @@
   },
   "for_more_information_read_our_full": {
     "message": "Para obtener más información, lee todos nuestros"
+  },
+  "ghostery__action_required": {
+    "message": "Ghostery: Action required"
   },
   "ghostery_browser_extension_is_installed_in_your_browser_but_is_inactive__you_are_browsing_the_web_unprotected_": {
     "message": "La extensión de navegador Ghostery está instalada en el navegador, pero está inactiva. Estás navegando por la red sin protección."
@@ -189,9 +201,15 @@
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghostery mostrará cuántos rastreadores ha bloqueado en una página. Si haces clic en el icono de Ghostery, verás información más detallada."
   },
+  "ghostery_will_stop_working_in_": {
+    "message": "Ghostery will stop working in:"
+  },
   "hosting": {
     "message": "Hosting",
     "description": "Tracker category name"
+  },
+  "hours": {
+    "message": "hours"
   },
   "ignore": {
     "message": "Ignorar"
@@ -299,11 +317,20 @@
   "read_more_on_whotracks_me": {
     "message": "Leer más sobre WhoTracks.Me"
   },
+  "renew_ghostery_for_full_protection": {
+    "message": "renew GHOSTERY for full protection"
+  },
+  "renew_setup": {
+    "message": "Renew Setup"
+  },
   "replaces_the_ghostery_icon_in_the_browser_toolbar_with_the_tracker_wheel_": {
     "message": "Sustituye el icono de Ghostery de la barra de herramientas del navegador por la rueda de rastreadores."
   },
   "report_a_broken_page": {
     "message": "Informar página rota"
+  },
+  "requests": {
+    "message": "Requests"
   },
   "resume": {
     "message": "Reactivar"
@@ -369,8 +396,8 @@
     "message": "Sin identificar",
     "description": "Tracker category name"
   },
-  "urls": {
-    "message": "URLs"
+  "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
+    "message": "We have updated Terms & Conditions. To continue using the Ghostery Tracker & Ad Blocker while browsing, please renew the setup."
   },
   "website": {
     "message": "Sitio web"
