--- a/extension-manifest-v3/src/_locales/fr/messages.json
+++ b/extension-manifest-v3/src/_locales/fr/messages.json
@@ -90,11 +90,17 @@
     "message": "Interaction avec les clients",
     "description": "Tracker category name"
   },
+  "days": {
+    "message": "jours"
+  },
   "detailed_view": {
     "message": "Affichage détaillé"
   },
   "disable": {
     "message": "Désactiver"
+  },
+  "disable_ghostery": {
+    "message": "Désactiver Ghostery"
   },
   "disable_trackers_preview": {
     "message": "Désact. aperçu des mouchards"
@@ -127,6 +133,9 @@
   "enable_never_consent_": {
     "message": "Activer Never-Consent ?"
   },
+  "enable_new_setup": {
+    "message": "Activer la nouvelle configuration"
+  },
   "enabled": {
     "message": "Activé"
   },
@@ -140,6 +149,9 @@
   },
   "for_more_information_read_our_full": {
     "message": "Pour plus d'information, lisez notre"
+  },
+  "ghostery__action_required": {
+    "message": "Ghostery : action requise"
   },
   "ghostery_browser_extension_is_installed_in_your_browser_but_is_inactive__you_are_browsing_the_web_unprotected_": {
     "message": "L'extension de navigateur Ghostery est installée dans votre navigateur, mais elle est inactive. Vous parcourez le Web sans protection."
@@ -189,9 +201,15 @@
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghostery affichera le nombre de trackers bloqués sur une page. Vous pouvez obtenir des informations détaillées en cliquant sur l'icône Ghostery."
   },
+  "ghostery_will_stop_working_in_": {
+    "message": "Ghostery cessera de fonctionner dans :"
+  },
   "hosting": {
     "message": "Hébergement",
     "description": "Tracker category name"
+  },
+  "hours": {
+    "message": "heures"
   },
   "ignore": {
     "message": "Ignorer"
@@ -299,11 +317,20 @@
   "read_more_on_whotracks_me": {
     "message": "Plus d'informations sur WhoTracks.Me"
   },
+  "renew_ghostery_for_full_protection": {
+    "message": "Renouvelez Ghostery pour bénéficier d'une protection complète"
+  },
+  "renew_setup": {
+    "message": "Renouveler la configuration"
+  },
   "replaces_the_ghostery_icon_in_the_browser_toolbar_with_the_tracker_wheel_": {
     "message": "Remplace l'icône Ghostery dans la barre d'outils du navigateur par l'anneau des trackers."
   },
   "report_a_broken_page": {
     "message": "Signaler un lien brisé"
+  },
+  "requests": {
+    "message": "Requests"
   },
   "resume": {
     "message": "Reprendre"
@@ -369,8 +396,8 @@
     "message": "Non identifié",
     "description": "Tracker category name"
   },
-  "urls": {
-    "message": "URLs"
+  "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
+    "message": "Nous avons mis à jour nos Conditions générales. Pour continuer à utiliser le bloqueur de trackers et de publicités Ghostery, veuillez renouveler la configuration."
   },
   "website": {
     "message": "Site Web"
