--- a/extension-manifest-v3/src/_locales/it/messages.json
+++ b/extension-manifest-v3/src/_locales/it/messages.json
@@ -90,11 +90,17 @@
     "message": "Interazione Cliente",
     "description": "Tracker category name"
   },
+  "days": {
+    "message": "giorni"
+  },
   "detailed_view": {
     "message": "Vista Dettagliata"
   },
   "disable": {
     "message": "Disattiva"
+  },
+  "disable_ghostery": {
+    "message": "Disabilita Ghostery"
   },
   "disable_trackers_preview": {
     "message": "Disattiva anteprima Tracker"
@@ -127,6 +133,9 @@
   "enable_never_consent_": {
     "message": "Abilitare Never-Cosent?"
   },
+  "enable_new_setup": {
+    "message": "Abilita la nuova configurazione"
+  },
   "enabled": {
     "message": "Attivato"
   },
@@ -140,6 +149,9 @@
   },
   "for_more_information_read_our_full": {
     "message": "Per maggiori informazioni, visita il nostro sito"
+  },
+  "ghostery__action_required": {
+    "message": "Ghostery: azione richiesta"
   },
   "ghostery_browser_extension_is_installed_in_your_browser_but_is_inactive__you_are_browsing_the_web_unprotected_": {
     "message": "L’estensione per il browser Ghostery è installata nel tuo browser ma è inattiva. Stai navigando sul web in modalità non protetta."
@@ -189,9 +201,15 @@
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghostery mostrerà quanti tracker sono stati bloccati in una pagina. Cliccare sull’icona di Ghostery per avere informazioni più dettagliate."
   },
+  "ghostery_will_stop_working_in_": {
+    "message": "Ghostery smetterà di funzionare tra:"
+  },
   "hosting": {
     "message": "Hosting",
     "description": "Tracker category name"
+  },
+  "hours": {
+    "message": "ore"
   },
   "ignore": {
     "message": "Ignora"
@@ -299,11 +317,20 @@
   "read_more_on_whotracks_me": {
     "message": "Scopri di più su WhoTracks.Me"
   },
+  "renew_ghostery_for_full_protection": {
+    "message": "rinnova GHOSTERY per una protezione completa"
+  },
+  "renew_setup": {
+    "message": "Rinnova la configurazione"
+  },
   "replaces_the_ghostery_icon_in_the_browser_toolbar_with_the_tracker_wheel_": {
     "message": "Sostituisce l’icona di Ghostery nella barra degli strumenti del browser con la ruota tracker."
   },
   "report_a_broken_page": {
     "message": "Segnala una pagina orfana"
+  },
+  "requests": {
+    "message": "Requests"
   },
   "resume": {
     "message": "Riattiva"
@@ -369,8 +396,8 @@
     "message": "Non identificato",
     "description": "Tracker category name"
   },
-  "urls": {
-    "message": "URLs"
+  "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
+    "message": "Abbiamo aggiornato i Termini e condizioni. Per continuare a usare il Ghostery Tracker & Ad Blocker durante la navigazione, rinnova la configurazione."
   },
   "website": {
     "message": "Sito web"
