--- a/extension-manifest-v3/src/_locales/ja/messages.json
+++ b/extension-manifest-v3/src/_locales/ja/messages.json
@@ -90,11 +90,17 @@
     "message": "顧客インタラクション",
     "description": "Tracker category name"
   },
+  "days": {
+    "message": "日"
+  },
   "detailed_view": {
     "message": "詳細ビュー"
   },
   "disable": {
     "message": "無効化"
+  },
+  "disable_ghostery": {
+    "message": "Ghosteryを無効にする"
   },
   "disable_trackers_preview": {
     "message": "トラッカーの無効化プレビュー"
@@ -127,6 +133,9 @@
   "enable_never_consent_": {
     "message": "決して同意しないを有効化しますか?"
   },
+  "enable_new_setup": {
+    "message": "新規設定を有効にする"
+  },
   "enabled": {
     "message": "有効になっています"
   },
@@ -140,6 +149,9 @@
   },
   "for_more_information_read_our_full": {
     "message": "詳細はこちらをご覧ください"
+  },
+  "ghostery__action_required": {
+    "message": "Ghostery: 要対応"
   },
   "ghostery_browser_extension_is_installed_in_your_browser_but_is_inactive__you_are_browsing_the_web_unprotected_": {
     "message": "Ghostery Browser Extensionはブラウザにインストールされていますが、非アクティブになっています。あなたは無防備にウェブを閲覧していることになります。"
@@ -189,9 +201,15 @@
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghosteryは、あるページでブロックされたトラッカーの数を表示します。Ghosteryのアイコンをクリックすると、より詳細な情報が表示されます。"
   },
+  "ghostery_will_stop_working_in_": {
+    "message": "Ghosteryの停止:"
+  },
   "hosting": {
     "message": "ホスティング",
     "description": "Tracker category name"
+  },
+  "hours": {
+    "message": "時間"
   },
   "ignore": {
     "message": "無視する"
@@ -299,11 +317,20 @@
   "read_more_on_whotracks_me": {
     "message": "WhoTracks.Meで詳細を見る"
   },
+  "renew_ghostery_for_full_protection": {
+    "message": "Ghosteryを更新して包括的な保護機能を利用する"
+  },
+  "renew_setup": {
+    "message": "更新設定"
+  },
   "replaces_the_ghostery_icon_in_the_browser_toolbar_with_the_tracker_wheel_": {
     "message": "ブラウザのツールバーのGhosteryのアイコンをトラッカーホイールに置き換えます。"
   },
   "report_a_broken_page": {
     "message": "区切られたページを報告"
+  },
+  "requests": {
+    "message": "Requests"
   },
   "resume": {
     "message": "再開"
@@ -369,8 +396,8 @@
     "message": "未知",
     "description": "Tracker category name"
   },
-  "urls": {
-    "message": "URLs"
+  "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
+    "message": "利用規約を更新しました。Ghosteryのトラッカー＆広告ブロッカーを引き続きご利用いただくには、セットアップを更新してください。"
   },
   "website": {
     "message": "ウェブサイト"
