--- a/extension-manifest-v3/src/_locales/ko/messages.json
+++ b/extension-manifest-v3/src/_locales/ko/messages.json
@@ -90,11 +90,17 @@
     "message": "고객 응대 ",
     "description": "Tracker category name"
   },
+  "days": {
+    "message": "일"
+  },
   "detailed_view": {
     "message": "자세히 보기 "
   },
   "disable": {
     "message": "비활성화 "
+  },
+  "disable_ghostery": {
+    "message": "Ghostery 비활성화"
   },
   "disable_trackers_preview": {
     "message": "트래커 미리보기 끄기"
@@ -127,6 +133,9 @@
   "enable_never_consent_": {
     "message": "동의하지 않음을 활성화하시겠습니까?"
   },
+  "enable_new_setup": {
+    "message": "새 셋업 활성화"
+  },
   "enabled": {
     "message": "활성화됨 "
   },
@@ -140,6 +149,9 @@
   },
   "for_more_information_read_our_full": {
     "message": "자세한 정보는 전문을 읽으시기 바랍니다"
+  },
+  "ghostery__action_required": {
+    "message": "Ghostery: 조치 필요"
   },
   "ghostery_browser_extension_is_installed_in_your_browser_but_is_inactive__you_are_browsing_the_web_unprotected_": {
     "message": "브라우저에 Ghostery 브라우저 확장 프로그램에 설치되어 있지만 비활성 상태입니다. 웹 브라우징이 보호되지 않습니다."
@@ -189,9 +201,15 @@
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghostery는 페이지에서 차단된 트래커의 수를 보여줍니다. Ghostery 아이콘을 클릭하면 자세한 정보를 볼 수 있습니다."
   },
+  "ghostery_will_stop_working_in_": {
+    "message": "Ghostery 작동 중지까지 남은 시간:"
+  },
   "hosting": {
     "message": "호스팅",
     "description": "Tracker category name"
+  },
+  "hours": {
+    "message": "시간"
   },
   "ignore": {
     "message": "무시"
@@ -299,11 +317,20 @@
   "read_more_on_whotracks_me": {
     "message": "WhoTracks.Me 자세히 보기"
   },
+  "renew_ghostery_for_full_protection": {
+    "message": "완벽한 보호를 위해 GHOSTERY를 갱신하세요"
+  },
+  "renew_setup": {
+    "message": "셋업 갱신"
+  },
   "replaces_the_ghostery_icon_in_the_browser_toolbar_with_the_tracker_wheel_": {
     "message": "브라우저 툴바에서 Ghostery 아이콘을 트래커 휠로 대체합니다."
   },
   "report_a_broken_page": {
     "message": "깨진 페이지 보고 "
+  },
+  "requests": {
+    "message": "Requests"
   },
   "resume": {
     "message": "다시 시작 "
@@ -369,8 +396,8 @@
     "message": "알 수 없음",
     "description": "Tracker category name"
   },
-  "urls": {
-    "message": "URLs"
+  "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
+    "message": "이용 약관이 업데이트되었습니다. 브라우징 중 Ghostery 트래커 및 광고 차단기를 계속 사용하려면 셋업을 갱신해주세요."
   },
   "website": {
     "message": "웹사이트"
