--- a/extension-manifest-v3/src/_locales/pl/messages.json
+++ b/extension-manifest-v3/src/_locales/pl/messages.json
@@ -90,11 +90,17 @@
     "message": "Interakcja z klientem",
     "description": "Tracker category name"
   },
+  "days": {
+    "message": "dni"
+  },
   "detailed_view": {
     "message": "Widok szczegółowy"
   },
   "disable": {
     "message": "Wyłącz"
+  },
+  "disable_ghostery": {
+    "message": "Dezaktywuj Ghostery"
   },
   "disable_trackers_preview": {
     "message": "Wyłącz podgląd trackerów"
@@ -127,6 +133,9 @@
   "enable_never_consent_": {
     "message": "Chcesz włączyć Never-Consent?"
   },
+  "enable_new_setup": {
+    "message": "Aktywuj nową konfigurację"
+  },
   "enabled": {
     "message": "Włączone"
   },
@@ -140,6 +149,9 @@
   },
   "for_more_information_read_our_full": {
     "message": "Aby uzyskać więcej informacji, przeczytaj "
+  },
+  "ghostery__action_required": {
+    "message": "Ghostery: wymagane działanie"
   },
   "ghostery_browser_extension_is_installed_in_your_browser_but_is_inactive__you_are_browsing_the_web_unprotected_": {
     "message": "Wtyczka Ghostery Browser jest zainstalowana na twojej przeglądarce, ale jest nieaktywna. Przeglądasz strony internetowe w sposób niechroniony."
@@ -189,9 +201,15 @@
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghostery będzie wyświetlać liczbę trackerów zablokowanych na danej stronie. Kliknięcie w ikonę Ghostery spowoduje wyśwetlenie bardziej szczegółowych informacji."
   },
+  "ghostery_will_stop_working_in_": {
+    "message": "Ghostery przestanie działać w:"
+  },
   "hosting": {
     "message": "Hosting",
     "description": "Tracker category name"
+  },
+  "hours": {
+    "message": "godz."
   },
   "ignore": {
     "message": "Zignoruj"
@@ -299,11 +317,20 @@
   "read_more_on_whotracks_me": {
     "message": "Dowiedz się więcej na WhoTracks.Me"
   },
+  "renew_ghostery_for_full_protection": {
+    "message": "wznów Ghostery, żeby uzyskać pełną ochronę"
+  },
+  "renew_setup": {
+    "message": "Wznów konfigurację"
+  },
   "replaces_the_ghostery_icon_in_the_browser_toolbar_with_the_tracker_wheel_": {
     "message": "Zastępuje ikonę Ghostery w pasku narzędzi przeglądarki ikoną koła."
   },
   "report_a_broken_page": {
     "message": "Zgłoś uszkodzoną stronę"
+  },
+  "requests": {
+    "message": "Requests"
   },
   "resume": {
     "message": "Wznów"
@@ -369,8 +396,8 @@
     "message": "Niezidentyfikowane",
     "description": "Tracker category name"
   },
-  "urls": {
-    "message": "URLs"
+  "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
+    "message": "Zaktualizowaliśmy Warunki. Żeby nadal korzystać z trackera i blokera reklam Ghostery podczas przeglądania stron, wznów konfigurację."
   },
   "website": {
     "message": "Witryna"
