--- a/extension-manifest-v3/src/_locales/pt_BR/messages.json
+++ b/extension-manifest-v3/src/_locales/pt_BR/messages.json
@@ -90,11 +90,17 @@
     "message": "Interação com o cliente",
     "description": "Tracker category name"
   },
+  "days": {
+    "message": "dias"
+  },
   "detailed_view": {
     "message": "Visão detalhada"
   },
   "disable": {
     "message": "Desativar"
+  },
+  "disable_ghostery": {
+    "message": "Desativar Ghostery"
   },
   "disable_trackers_preview": {
     "message": "Desativar a visualização de rastreadores"
@@ -127,6 +133,9 @@
   "enable_never_consent_": {
     "message": "Ativar Never-Consent?"
   },
+  "enable_new_setup": {
+    "message": "Ativar nova configuração"
+  },
   "enabled": {
     "message": "Ativado"
   },
@@ -140,6 +149,9 @@
   },
   "for_more_information_read_our_full": {
     "message": "Para mais informações, leia a nossa versão completa"
+  },
+  "ghostery__action_required": {
+    "message": "Ghostery: ação exigida"
   },
   "ghostery_browser_extension_is_installed_in_your_browser_but_is_inactive__you_are_browsing_the_web_unprotected_": {
     "message": "A extensão do navegador Ghostery está instalada no seu navegador, mas está inativa. Você está navegando na web desprotegido."
@@ -189,9 +201,15 @@
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "O Ghostery mostrará quantos rastreadores foram bloqueados em uma página. Clicar no ícone Ghostery revela informações mais detalhadas."
   },
+  "ghostery_will_stop_working_in_": {
+    "message": "O Ghostery parará de trabalhar em:"
+  },
   "hosting": {
     "message": "Hospedando",
     "description": "Tracker category name"
+  },
+  "hours": {
+    "message": "horas"
   },
   "ignore": {
     "message": "Ignorar"
@@ -299,11 +317,20 @@
   "read_more_on_whotracks_me": {
     "message": "Leia mais em WhoTracks.Me"
   },
+  "renew_ghostery_for_full_protection": {
+    "message": "renovar GHOSTERY para ter proteção completa"
+  },
+  "renew_setup": {
+    "message": "Renovar configuração"
+  },
   "replaces_the_ghostery_icon_in_the_browser_toolbar_with_the_tracker_wheel_": {
     "message": "Substitui o ícone do Ghostery na barra de ferramentas do navegador pela roda do rastreador."
   },
   "report_a_broken_page": {
     "message": "Relatar uma página quebrada"
+  },
+  "requests": {
+    "message": "Requests"
   },
   "resume": {
     "message": "Retomar"
@@ -369,8 +396,8 @@
     "message": "Não identificado",
     "description": "Tracker category name"
   },
-  "urls": {
-    "message": "URLs"
+  "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
+    "message": "Atualizamos os Termos e Condições. Para continuar usando o Ghostery Tracker & Ad Blocker durante a navegação, renove a configuração."
   },
   "website": {
     "message": "Site"
