--- a/extension-manifest-v3/src/_locales/zh_CN/messages.json
+++ b/extension-manifest-v3/src/_locales/zh_CN/messages.json
@@ -90,11 +90,17 @@
     "message": "客户互动",
     "description": "Tracker category name"
   },
+  "days": {
+    "message": "天"
+  },
   "detailed_view": {
     "message": "详细视图"
   },
   "disable": {
     "message": "禁用"
+  },
+  "disable_ghostery": {
+    "message": "禁用 Ghostery"
   },
   "disable_trackers_preview": {
     "message": "禁用跟踪器预览"
@@ -127,6 +133,9 @@
   "enable_never_consent_": {
     "message": "启用 Never-Consent？"
   },
+  "enable_new_setup": {
+    "message": "启用新设置"
+  },
   "enabled": {
     "message": "已启用"
   },
@@ -140,6 +149,9 @@
   },
   "for_more_information_read_our_full": {
     "message": "欲了解更多信息，请阅读我们的完整"
+  },
+  "ghostery__action_required": {
+    "message": "Ghostery：需要操作"
   },
   "ghostery_browser_extension_is_installed_in_your_browser_but_is_inactive__you_are_browsing_the_web_unprotected_": {
     "message": "Ghostery 浏览器扩展程序已安装至您的浏览器中，但尚未启用。您当前的网页浏览不受保护。"
@@ -189,9 +201,15 @@
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghostery 会显示页面上已阻止的跟踪器数量。点击 Ghostery 图标，获取更多详情。"
   },
+  "ghostery_will_stop_working_in_": {
+    "message": "距离 Ghostery 停止运行还有："
+  },
   "hosting": {
     "message": "托管",
     "description": "Tracker category name"
+  },
+  "hours": {
+    "message": "小时"
   },
   "ignore": {
     "message": "忽略"
@@ -299,11 +317,20 @@
   "read_more_on_whotracks_me": {
     "message": "在 WhoTracks.Me 上了解详情"
   },
+  "renew_ghostery_for_full_protection": {
+    "message": "续订 GHOSTERY 以获得全面保护"
+  },
+  "renew_setup": {
+    "message": "续订设置"
+  },
   "replaces_the_ghostery_icon_in_the_browser_toolbar_with_the_tracker_wheel_": {
     "message": "将浏览器工具栏的 Ghostery 图标替换为跟踪器轮盘。"
   },
   "report_a_broken_page": {
     "message": "报告崩溃页面"
+  },
+  "requests": {
+    "message": "Requests"
   },
   "resume": {
     "message": "继续"
@@ -369,8 +396,8 @@
     "message": "未识别",
     "description": "Tracker category name"
   },
-  "urls": {
-    "message": "URLs"
+  "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
+    "message": "我们更新了条款及条件。若要在浏览时继续使用 Ghostery Tracker 和广告拦截工具，请更新设置。"
   },
   "website": {
     "message": "网站"
