--- a/extension-manifest-v3/src/_locales/zh_TW/messages.json
+++ b/extension-manifest-v3/src/_locales/zh_TW/messages.json
@@ -90,11 +90,17 @@
     "message": "客戶互動",
     "description": "Tracker category name"
   },
+  "days": {
+    "message": "日"
+  },
   "detailed_view": {
     "message": "詳細圖示"
   },
   "disable": {
     "message": "停用"
+  },
+  "disable_ghostery": {
+    "message": "停用 Ghostery"
   },
   "disable_trackers_preview": {
     "message": "停用「追蹤器預覽」"
@@ -127,6 +133,9 @@
   "enable_never_consent_": {
     "message": "啟用 Never-Consent？"
   },
+  "enable_new_setup": {
+    "message": "啟用新設定"
+  },
   "enabled": {
     "message": "已啟用"
   },
@@ -140,6 +149,9 @@
   },
   "for_more_information_read_our_full": {
     "message": "如欲了解更多訊息，請閱讀我們的全文"
+  },
+  "ghostery__action_required": {
+    "message": "Ghostery：需要採取動作"
   },
   "ghostery_browser_extension_is_installed_in_your_browser_but_is_inactive__you_are_browsing_the_web_unprotected_": {
     "message": "Ghostery 瀏覽器擴充程式已安裝至瀏覽器，但尚未啟用。你目前的網頁瀏覽未受保護。"
@@ -189,9 +201,15 @@
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghostery 將顯示頁面中已經阻擋的追蹤器數量。點擊 Ghostery 圖示可以顯示更多資訊。"
   },
+  "ghostery_will_stop_working_in_": {
+    "message": "Ghostery 將會在以下位置停止運作："
+  },
   "hosting": {
     "message": "託管",
     "description": "Tracker category name"
+  },
+  "hours": {
+    "message": "小時"
   },
   "ignore": {
     "message": "忽略"
@@ -299,11 +317,20 @@
   "read_more_on_whotracks_me": {
     "message": "在 WhoTracks.Me 上繼續閱讀"
   },
+  "renew_ghostery_for_full_protection": {
+    "message": "更新 GHOSTERY 以獲得全面防護"
+  },
+  "renew_setup": {
+    "message": "更新設定"
+  },
   "replaces_the_ghostery_icon_in_the_browser_toolbar_with_the_tracker_wheel_": {
     "message": "將瀏覽器工具列中的 Ghostery 圖示換成追蹤器齒輪。"
   },
   "report_a_broken_page": {
     "message": "報告已損毀的網頁"
+  },
+  "requests": {
+    "message": "Requests"
   },
   "resume": {
     "message": "恢復"
@@ -369,8 +396,8 @@
     "message": "不明",
     "description": "Tracker category name"
   },
-  "urls": {
-    "message": "URLs"
+  "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
+    "message": "我們更新了條款及條件。若要在瀏覽時繼續使用 Ghostery Tracker 和廣告攔截器，請更新設定。"
   },
   "website": {
     "message": "網站"
